--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
-title: Hello World
-description: A small github site
+title: Huy Manh Xuan's project page
+description: This github site used to see all my projects so far
