--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title: Huy Manh Xuan's project page
-description: This github site used to see all my projects so far
+description: This github site contain nearly all informations of my projects so far.
